# divvywonga

./: .dockerignore  Dockerfile  docker-compose.yaml  pyproject.toml
divvywonga/: apps.py  manage.py
divvywonga/core/: settings.py  views.py
divvywonga/core/templates/core/: base.html  index.html  nav.html
divvywonga/divvywonga/: asgi.py  settings.py  urls.py  wsgi.py
divvywonga/users/: admin.py  forms.py  models.py  urls.py  views.py
divvywonga/users/migrations/: 0001_initial.py
divvywonga/users/templates/users/: create_group.html  group_detail.html  invite_to_group.html  login.html  logout.html  register.html
